fix basic layout issue for podium

--- a/public/components/podium/podium.css
+++ b/public/components/podium/podium.css
@@ -15,22 +15,6 @@ The positioning must be relative to the podium picture, which has a 16:9 aspect 
     background-position: center;
 }
 
-.podium-round {
-    position: relative;
-    width: 100%;
-    height: 50vh;
-}
-  
-.podium-final {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: black;
-    z-index: 1;
-}
-
 .podiumAnimated {
     animation: bounce 1.2s linear infinite;
 }
@@ -55,16 +39,16 @@ The positioning must be relative to the podium picture, which has a 16:9 aspect 
 
 .podium > div {
     font-family: komika_textregular;
-    font-size: 3vw;
+    font-size: min(3.5vw, 6.22vh);
     color: white;
     position: absolute;
-    left: 50%;
-    top: 50%;
+    left: 50vw;
+    top: 50vh;
     text-align: center;
 }
 
 .podiumRank1 {
-    transform: translateX(-50%) translateY(-100%);
+    transform: translateX(-50%) translateY(-100%) translateY(min(0.7vw, 1.24vh));
 }
 
 .podiumRank1Animated {
@@ -83,7 +67,7 @@ The positioning must be relative to the podium picture, which has a 16:9 aspect 
 }
 
 .podiumRank2 {
-    transform: translateX(-170%) translateY(-80%);
+    transform: translateX(-50%) translateX(max(-14.5vw, -25.78vh)) translateY(-100%) translateY(min(7.31vw, 13vh));
 }
 
 .podiumRank2Animated {
@@ -102,7 +86,7 @@ The positioning must be relative to the podium picture, which has a 16:9 aspect 
 }
 
 .podiumRank3 {
-    transform: translateX(70%) translateY(-80%);
+    transform: translateX(-50%) translateX(min(14.5vw, 25.78vh)) translateY(-100%) translateY(min(10.69vw, 19vh));
 }
 
 .podiumRank3Animated {
@@ -121,7 +105,7 @@ The positioning must be relative to the podium picture, which has a 16:9 aspect 
 }
 
 .podiumAvatar {
-    font-size: 7vw;
+    font-size: 3em;
 }
 
 .podiumAvatar1 {
